# Meridian

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/core/: budget.py  config.py  memory.py  oauth2.py  rag.py  ratelimit.py  utils.py
app/routers/: chat.py  health.py  sources.py  users.py
app/schemas/: schemas.py
docs/: AI_HANDOFF_PROMPT.md  ARCHITECTURE.md  PROJECT_LOG.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/auth/: AuthContext.tsx  RequireAuth.tsx
frontend/src/chat/: history.ts
frontend/src/components/: Brand.tsx  Credits.tsx  SiteNav.tsx  ThemeToggle.tsx
frontend/src/pages/: Chat.tsx  Landing.tsx  Login.tsx  Plans.tsx
frontend/src/theme/: ThemeContext.tsx
scripts/: create_usage_counters.sql  create_users_table.sql  enable_hnsw.sql  fix_vector_search.sql  setup_supabase.sql
