[project]
name = "myrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.139.2",
    "langchain>=1.3.14",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.10.5",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<4.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.13.0",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.9",
    "supabase>=2.31.0",
    "email-validator>=2.0.0",
    "uvicorn>=0.51.0",
]
